# device_qemu

./: OAT.xml  README.en.md  README.md  README_zh.md
SmartL_E802/: BUILD.gn  README.md  README_zh.md  liteos.ld  main.c  ohos.build  startup.S  target_config.h
SmartL_E802/drivers/csky_driver/: BUILD.gn
SmartL_E802/drivers/csky_driver/include/: drv_common.h  drv_dmac.h  drv_i2s.h  drv_timer.h  sys_freq.h
SmartL_E802/drivers/csky_driver/src/: devices.c  dw_gpio.c  isr.c
SmartL_E802/fs/: ff_gen_drv.h  hal_littlefs.c  hal_littlefs.h  hal_vfs.c  hal_vfs.h  littlefs_hal.c
SmartL_E802/hals/utils/file/: BUILD.gn  hal_file.c
SmartL_E802/libc/: BUILD.gn
SmartL_E802/liteos_m/: config.gni
SmartL_E802/liteos_m/board/: BUILD.gn  main.c  startup.S  target_config.h
SmartL_E802/liteos_m/board/fs/: fs_init.c  fs_init.h
SmartL_E802/liteos_m/board/libc/: dprintf.c  dprintf.h
SmartL_E802/liteos_m/board/test/: task_demo.c
SmartL_E802/liteos_m/hdf_config/: hdf.hcs
SmartL_E802/test/: BUILD.gn  task_demo.c
arm/arm_init/virt/: BUILD.gn  Makefile  build.sh  virt.mak
arm_mps2_an386/: BUILD.gn  README.md  README_zh.md  main.c  ohos.build  qemu_run.sh  target_config.h
arm_mps2_an386/driver/: arm_uart_drv.c  arm_uart_drv.h  uart.h
arm_mps2_an386/fs/: ff_gen_drv.c  ff_gen_drv.h
arm_mps2_an386/include/: soc.h  uart.h
arm_mps2_an386/libc/: dprintf.c
arm_mps2_an386/liteos_m/: BUILD.gn  config.gni
arm_mps2_an386/liteos_m/board/: BUILD.gn  liteos.ld  main.c  target_config.h
arm_mps2_an386/liteos_m/board/driver/: uart.c
arm_mps2_an386/liteos_m/board/fs/: BUILD.gn  ff_gen_drv.c  ff_gen_drv.h  fs_init.c  fs_lowlevel.c  fs_lowlevel.h
arm_mps2_an386/liteos_m/board/include/: soc.h
arm_mps2_an386/liteos_m/board/test/: test_demo.c
arm_mps2_an386/scripts/: qemu_test_monitor.sh
arm_mps2_an386/test/: BUILD.gn
arm_virt/: BUILD.gn  README.md  README_zh.md  build.sh  example.md  ohos.build  qemu-init  qemu-run
arm_virt/config/: Makefile
arm_virt/config/cfiflash/: Makefile  cfi_config.hcs  cfiflash.c  cfiflash.h  cfiflash_internal.h  hdf_cfi.c
arm_virt/config/fw_cfg/: Makefile  fw_cfg.c
arm_virt/config/uart/: uart_config.hcs
arm_virt/config/virtnet/: Makefile  virtnet.c  virtnet.h
arm_virt/linux/: BUILD.gn  README.md  README_zh.md  ohos.build
arm_virt/linux/chipset/: BUILD.gn  ohos.its  ohos_updater.its
arm_virt/linux/chipset/etc/: fstab.qemu.arm.linux  (+1 more)
arm_virt/linux/images/: BUILD.gn  ramdisk_resource_config.ini  system_image_conf.txt  updater_ramdisk_resource_config.ini  userdata_image_conf.txt  vendor_image_conf.txt
arm_virt/linux/rootfs/: BUILD.gn  default.para  init.qemu.arm.linux.cfg  qemu.arm.linux.init.cfg
arm_virt/linux_full/: BUILD.gn  bundle.json  config.gni  device.gni
arm_virt/liteos_a/: BUILD.gn  README.md  README_zh.md  config.gni  example.md
arm_virt/liteos_a/board/: BUILD.gn  Makefile  platform.c  target_config.h
arm_virt/liteos_a/config/: BUILD.gn  Kconfig  hdf.hcs
arm_virt/liteos_a/drivers/: BUILD.gn
arm_virt/liteos_a/hdf_config/: Makefile  hdf.hcs
arm_virt/liteos_a_mini/: BUILD.gn  board  config.gni
arm_virt/liteos_a_mini/board/: BUILD.gn  Makefile
common/virt_full/: BUILD.gn  device.gni  soc.gni
common/virt_full/audio_alsa/: common.h  vendor_capture.c  vendor_render.c
common/virt_full/cfg/: BUILD.gn  default.para  fstab.virt  init.virt.cfg  init.virt.usb.cfg
common/virt_full/distributedhardware/: BUILD.gn  dinput_business_event_whitelist.cfg  distributed_hardware_components_cfg.json
common/virt_full/hardware/: BUILD.gn
common/virt_full/kernel/: BUILD.gn  arm64_virt_defconfig  arm_virt_defconfig  build_kernel.sh  riscv64_virt_defconfig  x86_64_virt_defconfig
common/virt_full/updater/: BUILD.gn  updater_ramdisk_resource_config.ini
cortex_m4_an386/test/: BUILD.gn  test_demo.c
esp32/: BUILD.gn  ESP32.ld  README.md  README_zh.md  main.c  ohos.build  target_config.h
esp32/fs/: BUILD.gn  ff_gen_drv.c  fs_config.h  fs_init.h  hal_littlefs.c  hal_littlefs.h  hal_vfs.c  hal_vfs.h
esp32/hals/driver/: BUILD.gn
esp32/libc/: BUILD.gn  dprintf.c  swap.c
esp32/liteos_m/: BUILD.gn  config.gni
esp32/liteos_m/board/: BUILD.gn  ESP32.ld  main.c  target_config.h
esp32/liteos_m/hdf_config/: hdf.hcs
esp32/test/: BUILD.gn  task_demo.c  task_demo.h
hardware/display/: BUILD.gn  display_gralloc.c  display_layer.c
riscv32/: Liteos.ld  Makefile  board.ld.S  compiler_dir.sh  config.gni  los_start.S  main.c  qemu_sifive_run.sh  riscv_hal.c  target_config.h
riscv32/driver/: mtimer.c  mtimer.h  plic.c  plic.h  uart.c
riscv32/include/: riscv_hal.h
riscv32/include/asm/: soc.h
riscv32/libc/: dprintf.c
riscv32_sifive_u/: BUILD.gn  Makefile  README.md  README_zh.md  main.c  qemu_sifive_run.sh  riscv_hal.c  target_config.h
riscv32_sifive_u/driver/: uart.h
riscv32_sifive_u/liteos_m/: config.gni
riscv32_virt/: BUILD.gn  Liteos.ld  Makefile  README.md  README_zh.md  example.md  los_start.S  main.c  ohos.build  qemu_run.sh  qemu_sifive_run.sh  riscv_hal.c  target_config.h
riscv32_virt/driver/: uart.c  uart.h  virtmmio.h
riscv32_virt/driver/video/: fb.c  fb_init.c  fb_init.h  fb_mem.h  key_cache.c  key_cache.h
riscv32_virt/hardware/: BUILD.gn  osal_io_adapter.h
riscv32_virt/hardware/adapter/: hdf_syscall_adapter.c
riscv32_virt/hardware/display/: BUILD.gn  display_layer.c
riscv32_virt/hardware/input/: BUILD.gn
riscv32_virt/hdf_config/: BUILD.gn  hdf.hcs
riscv32_virt/include/asm/: soc.h
riscv32_virt/libc/: dprintf.c
riscv32_virt/liteos_m/: BUILD.gn  config.gni
riscv32_virt/liteos_m/board/: BUILD.gn  liteos.ld  main.c  riscv_hal.c  target_config.h
riscv32_virt/liteos_m/gen_fs/: BUILD.gn
riscv32_virt/liteos_m/hdf_config/: BUILD.gn  hdf.hcs
riscv32_virt/test/: BUILD.gn  display_test.c  input_demo.c  test_demo.c  test_demo.h
x86_64_virt/linux/: BUILD.gn  README.md  README_zh.md  ohos.build  part_name.gni
x86_64_virt/linux/chipset/: BUILD.gn
x86_64_virt/linux/images/: BUILD.gn
x86_64_virt/linux/rootfs/: BUILD.gn  default.para  init.qemu.x86_64.linux.cfg  qemu.x86_64.linux.updater.cfg
(+340 files in other folders)
