# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.

static_library("board") {
  asmflags = board_asmflags
  sources = [
    "main.c",
    "riscv_hal.c",
    "libc/dprintf.c",
    "driver/mtimer.c",
    "driver/plic.c",
    "driver/uart.c",
    "los_start.S",
  ]

  include_dirs = [
    "./driver",
  ]
}

executable("riscv32_virt") {
  output_name = "OHOS_Image"
  ldflags = [
    "-Wl,-mcmodel=medany",
    "-Wl,-melf32lriscv",
    "-nostartfiles",
    "-Wl,-T"+rebase_path("Liteos.ld"),
  ]
  libs = [
    "gcc",
    "nosys",
    "c"
  ]
  deps = [
    ":board"
  ]
}
