# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0.0"

# Board CPU type, e.g. "cortex-a7", "riscv32", "e802".
board_cpu = "e802"

# Board arch, e.g.  "armv7-a", "rv32imac", "ck802".
board_arch = "ck802"

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "csky-elfabiv2-gcc"

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "csky-elfabiv2-"

# Compiler type, "gcc".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
  "-gdwarf-2",
  "-fno-omit-frame-pointer",
  "-ffunction-sections",
  "-fdata-sections",
  "-MMD",
  "-MP",
  "-Wno-pointer-sign",
]
board_cxx_flags = board_cflags

board_ld_flags = []

# Board related headfiles search path.
board_include_dirs = [
  "//kernel/liteos_m/kernel/arch/csky/v2/gcc",
  "//device/qemu/SmartL_E802",
  "//device/qemu/SmartL_E802/fs",
  "//device/qemu/SmartL_E802/drivers/csky_driver/include",
  "//third_party/musl/porting/liteos_m/kernel/include",
  "//third_party/bounds_checking_function/include",
  "//kernel/liteos_m/utils",
  "//kernel/liteos_m/kernel/include",
  "//kernel/liteos_m/kernel/arch/include",
]

# Board adapter dir for OHOS components.
board_adapter_dir = ""

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
