# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("demo") {
  sources = [ "task_demo.c" ]

  include_dirs = [
    "./",
    "../drivers/csky_driver/include",
    "//kernel/liteos_m/kernel/include",
    "//kernel/liteos_m/utils",
    "//kernel/liteos_m/kernel/arch/include",
    "//base/startup/bootstrap_lite/services/source",
    "//utils/native/lite/include",
    "//device/qemu/SmartL_E802/fs",
    "//device/qemu/SmartL_E802/hals/driver",
  ]

  deps = [
    "//device/qemu/SmartL_E802/fs:hal_fs",
    "//utils/native/lite/file:native_file",
  ]
}
