# Copyright (c) 2022 Huawei Device Co., Ltd.
# # Licensed under the Apache License, Version 2.0 (the "License");
# # you may not use this file except in compliance with the License.
# # You may obtain a copy of the License at
# #
# #     http://www.apache.org/licenses/LICENSE-2.0
# #
# # Unless required by applicable law or agreed to in writing, software
# # distributed under the License is distributed on an "AS IS" BASIS,
# # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# # See the License for the specific language governing permissions and
# # limitations under the License.

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = "armv8-a"

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = "cortex-a55"

board_toolchain_type = "clang"

board_fpu = "neon-fp-armv8"
