# Copyright (C) 2024 Institute of Software, Chinese Academy of Sciences .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("device.gni")

group("virt_group") {
  deps = [
    "cfg:init_configs",
    "//device/qemu/common/virt_full/kernel:build_kernel",
    "//device/qemu/common/virt_full/kernel/ko:virt_ko",
    "//device/qemu/common/virt_full/kernel/firmware:virt_firmware",
    "//device/qemu/common/virt_full/distributedhardware:distributedhardware",
    "//device/qemu/common/virt_full/updater:updater_files",
    "//device/qemu/common/virt_full/hardware:hardware_group",
    "//vendor/ohemu/virt:virtconfig_group",
  ]
  if (is_support_graphic) {
    deps += [
      "//device/qemu/common/virt_full/hardware/display:display_buffer_model",
      "//device/qemu/common/virt_full/hardware/display:display_composer_model",
    ]
  }
  if (is_support_codec) {
    deps += []
  }
}
