# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("hal_fs") {
  sources = [
    "//third_party/littlefs/bd/lfs_rambd.c",
    "//third_party/littlefs/lfs.c",
    "//third_party/littlefs/lfs_util.c",
    "fs_init.c",
    "hal_littlefs.c",
    "hal_vfs.c",
    "littlefs_hal.c",
  ]

  include_dirs = [
    ".",
    "//kernel/liteos_m/kernel/include",
    "//kernel/liteos_m/utils",
    "//kernel/liteos_m/kernel/arch/include",
    "//kernel/liteos_m/kal/cmsis",
    "//kernel/liteos_m/kal/cmsis",
    "//third_party/littlefs",
    "//third_party/littlefs/bd",
    "//third_party/musl/include",
    "//utils/native/base/include",
  ]
}
