# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

shared_library("display_layer") {
  output_name = "display_layer"
  sources = [
    "//drivers/peripheral/display/hal/disp_hal.c",
    "display_layer.c",
  ]
  include_dirs = [
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/hal",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/adapter/uhdf/posix/include",
    "//drivers/framework/include/utils",
    "//drivers/framework/ability/sbuf/include",
    "//drivers/framework/utils/include",
    "//drivers/framework/include/core",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]
  deps = [
    "//drivers/adapter/uhdf/manager:hdf_core",
    "//drivers/adapter/uhdf/posix:hdf_posix_osal",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
  defines = [ "__USER__" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]
}

shared_library("display_gralloc") {
  output_name = "display_gralloc"
  sources = [ "display_gralloc.c" ]
  include_dirs = [
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/hal",
    "//drivers/drivers/peripheral/display/hal",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/framework/include/utils",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
    "//drivers/adapter/uhdf/posix/include",
  ]

  deps = [
    "//drivers/adapter/uhdf/posix:hdf_posix_osal",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]
}

shared_library("display_gfx") {
  output_name = "display_gfx"
  sources = [ "display_gfx.c" ]
  include_dirs = [
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/hal",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/framework/include/utils",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
    "//drivers/adapter/uhdf/posix/include",
  ]

  deps = [
    "//drivers/adapter/uhdf/posix:hdf_posix_osal",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]
}

lite_component("hdi_display") {
  features = [
    ":display_layer",
    ":display_gralloc",
    ":display_gfx",
  ]
}
