#Copyright (c) 2020-2021 Huawei Device Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0.0"

# Board CPU type, for example: "cortex-a7", "riscv32".
board_cpu = ""

# Board arch, for example: "armv7-a", "rv32imc".
board_arch = "rv32imac"

# Toolchain used for system compiling.
# For example: gcc-arm-none-eabi, arm-linux-ohoseabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toolchain.
board_toolchain = "riscv32-unknown-elf"

#board_toolchain = "riscv-none-embed"

# The path which toolchain installed, it's not mandatory if toolchain path has been added to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "riscv32-unknown-elf-"

#board_toolchain_prefix = "riscv-none-embed-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

#Compiler optimization level options
board_opt_flags = [ "-O2" ]

# Board related common compile flags.
board_cflags = [
  "-mabi=ilp32",
  "-static",
  "-fno-common",
  "-fno-stack-protector",
  "-ffunction-sections",
  "-fdata-sections",
  "-fno-omit-frame-pointer",
  "-Wno-format-truncation",
  "-fno-builtin",
  "-D__RISC_V__",
  "-D__LITEOS_M__",
]
board_cflags += board_opt_flags

board_asmflags = [
  "-march=rv32imac",
  "-mabi=ilp32",
  "-static",
]
board_asmflags += board_opt_flags
board_cxx_flags = board_cflags
board_ld_flags = []

# Board related headfiles search path.
board_include_dirs = [
  "//device/qemu/riscv32_virt",
  "//device/qemu/riscv32_virt/include",
  "//device/qemu/riscv32_virt/include/asm",
  "//device/qemu/riscv32_virt/fs",
  "//kernel/liteos_m/kernel/include",
  "//kernel/liteos_m/kernel/arch/include",
  "//kernel/liteos_m/kernel/arch/risc-v/riscv32/gcc",
  "//kernel/liteos_m/kernel/arch/risc-v/riscv32/gcc/asm",
  "//kernel/liteos_m/utils",
  "//kernel/liteos_m/components/fs/fatfs",
  "//third_party/FatFs/source",
  "//third_party/musl/porting/liteos_m/kernel/include",
  "//third_party/bounds_checking_function/include",
]

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/qemu/riscv32_virt/driver"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
