# Copyright (c) 2026 Huawei Device Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Keep the legacy chipset part for the minimal product while rebinding the
# shared linux assets to the full device part when building x86_64_virt.
x86_64_linux_full_product = false
x86_64_linux_part_name = "qemu_x86_64_linux_chipset"
if (product_name == "x86_64_virt") {
  x86_64_linux_full_product = true
  x86_64_linux_part_name = "qemu_virt_full_x86_64"
}
