# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.

import("//build/lite/config/component/lite_component.gni")

build_ext_component("virt_make_kernel") {
    exec_path = rebase_path(".", root_build_dir)
    outdir = rebase_path("$root_out_dir")
    command = "./build.sh ${outdir} ${board_name} ${ohos_kernel_type} ${ohos_build_compiler}"
    deps = ["//kernel/liteos_a:kernel"]
}
