# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_prebuilt_etc("fstab.qemu.arm.linux") {
  source = "etc/fstab.qemu.arm.linux"
  module_install_dir = "etc"
  part_name = "qemu_arm_linux_chipset"
  install_images = [ vendor_base_dir ]
}

group("chipset_files") {
  deps = [
    ":fstab.qemu.arm.linux",
    "//kernel/linux/build:linux_kernel",
  ]
}
